atualizacao do codigo.

--- a/src/index.html
+++ b/src/index.html
@@ -7,8 +7,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header class=""></header>
-    <main class=""></main>
+    <main class="">
+        <input type="file" name="file" id="file" class="">
+    </main>
     <footer class=""></footer>
 
     <script src="main.js"></script>
