melhoria no codigo do html.

--- a/src/index.html
+++ b/src/index.html
@@ -5,13 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Converter arquivo</title>
     <link rel="stylesheet" href="style.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.2.0/jspdf.min.js"></script>
 </head>
 <body>
     <main class="">
         <input type="file" name="file" id="file" class="">
+        <button type="button" id="botao">click</button>
     </main>
     <footer class=""></footer>
 
-    <script src="main.js"></script>
+    <script src="main.js" defer></script>
 </body>
 </html>
